k8s/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pink-frontend
  labels:
    app.kubernetes.io/part-of: pink
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: pink
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/ietf-tools/pink-frontend:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pink-frontend
  labels:
    app.kubernetes.io/part-of: pink
spec:
  selector:
    app.kubernetes.io/component: frontend
  ports:
    - port: 3000
      targetPort: 3000
