k8s/base/memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  labels:
    app.kubernetes.io/part-of: pink
    app.kubernetes.io/component: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: memcached
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: pink
        app.kubernetes.io/component: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6
          args: ["--memory-limit=128"]
          ports:
            - containerPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  labels:
    app.kubernetes.io/part-of: pink
spec:
  selector:
    app.kubernetes.io/component: memcached
  ports:
    - port: 11211
      targetPort: 11211
