k8s/base/mq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq
  labels:
    app.kubernetes.io/part-of: pink
    app.kubernetes.io/component: mq
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: mq
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: pink
        app.kubernetes.io/component: mq
    spec:
      containers:
        - name: mq
          image: rabbitmq:4.1
          ports:
            - containerPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: mq
  labels:
    app.kubernetes.io/part-of: pink
spec:
  selector:
    app.kubernetes.io/component: mq
  ports:
    - port: 5672
      targetPort: 5672
