k8s/base/statics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reef-statics
  labels:
    app.kubernetes.io/part-of: reef
    app.kubernetes.io/component: statics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: statics
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: reef
        app.kubernetes.io/component: statics
    spec:
      containers:
        - name: statics
          image: ghcr.io/ietf-tools/reef-statics:latest
          ports:
            - containerPort: 8042
---
apiVersion: v1
kind: Service
metadata:
  name: reef-statics
  labels:
    app.kubernetes.io/part-of: reef
spec:
  selector:
    app.kubernetes.io/component: statics
  ports:
    - port: 8042
      targetPort: 8042
