k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pink
  labels:
    app.kubernetes.io/part-of: pink
spec:
  rules:
    - host: pink.example.org # overridden per environment
      http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: pink-statics
                port:
                  number: 8042
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pink-backend
                port:
                  number: 8000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: pink-backend
                port:
                  number: 8000
          - path: /oidc
            pathType: Prefix
            backend:
              service:
                name: pink-backend
                port:
                  number: 8000
          - path: /manage
            pathType: Prefix
            backend:
              service:
                name: pink-backend
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: pink-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pink-frontend
                port:
                  number: 3000
